--- a/src/resource/views/login.hbs
+++ b/src/resource/views/login.hbs
@@ -10,6 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <style>
         p.item {
             padding: 16px;
@@ -28,10 +29,12 @@
         }
 
         .bg-form {
-            background-color: rgb(240, 192, 235) !important;
+            background-color: rgb(255, 255, 255) !important;
         }
 
-        
+        .mb-0 {
+            margin-bottom: 0 !important;
+        }
     </style>
 </head>
 
@@ -58,7 +61,7 @@
                             </div>
 
                         </div>
-                        <div class="form-group">
+                        <div class="form-group mb-0">
                             <label for="pass">Mật khẩu</label>
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
@@ -73,13 +76,19 @@
 
 
                         <div id="alert-login" class="form-group" hidden>
-                            <div class="alert alert-danger alert-dismissible fade show" >
+                            <div class="alert alert-danger alert-dismissible fade show">
                                 <span id="msg__login"></span>
                                 <button type="button" class="close" data-dismiss="alert">&times;</button>
-                                
+
                             </div>
                         </div>
-                        <div class="form-group">
+
+                        <div class="form-group d-flex flex-column">
+                            </p> <a href="/auth/google" class="btn btn-danger my-2 mb-0"><span
+                                    class="fa fa-google"></span> Đăng nhập với Google</a> 
+                            <a href="/auth/facebook" class="btn btn-primary my-2"><span
+                                    class="fa fa-facebook"></span> Đăng nhập với
+                                Facebook</a>
                             <button id="btn_signIn" class="btn btn-success px-5" type="submit">Đăng nhập</button>
                         </div>
                         <div class="form-group">
@@ -125,11 +134,11 @@
     })
 
     phone.addEventListener('keypress', () => {
-        alertLogin.setAttribute('hidden',true)
+        alertLogin.setAttribute('hidden', true)
     })
 
     password.addEventListener('keypress', () => {
-        alertLogin.setAttribute('hidden',true)
+        alertLogin.setAttribute('hidden', true)
     })
 
 
