--- a/src/resource/views/login.hbs
+++ b/src/resource/views/login.hbs
@@ -92,7 +92,8 @@
                             <button id="btn_signIn" class="btn btn-success px-5" type="submit">Đăng nhập</button>
                         </div>
                         <div class="form-group">
-                            <p>Bạn chưa có tài khoản? <a href="/register">Đăng ký ngay!</a></p>
+                            <p style="margin-bottom: 0px;">Bạn chưa có tài khoản? <a href="/register">Đăng ký ngay!</a></p> 
+                            <a style="padding-left: 0px;" href="/forgot-password">Quên mật khẩu?</a>
                         </div>
                     </form>
                 </div>
