--- a/src/public/css/search.css
+++ b/src/public/css/search.css
@@ -1,3 +1,20 @@
+.link{
+    margin-top: 30px;
+}
+.link a {
+    text-decoration: none;
+    color: gray;
+}
+.link a:hover {
+    text-decoration: none;
+    color: orange;
+}
+.link label{
+    color: gray;
+}
+#arrow{
+    margin-right: 10px;
+}
 .result {
     font-size: 20px;
     margin-top: 20px;
