--- a/src/resource/views/home.hbs
+++ b/src/resource/views/home.hbs
@@ -21,7 +21,8 @@
 </head>
 
 <style>
-    .img__moview:hover,.title__film {
+    .img__moview:hover,
+    .title__film {
         opacity: 0.8;
         cursor: pointer;
     }
@@ -110,7 +111,9 @@
             </div>
             {{/each}}
             <div class="btn__view__more">
-                <button id="btn__viewMore" class="btn btn-primary">Xem thêm</button>
+                <a href="/phim-dang-chieu">
+                    <button id="btn__viewMore" class="btn btn-primary">Xem thêm</button>
+                </a>
             </div>
         </div>
 
