--- a/src/resource/views/now_showing.hbs
+++ b/src/resource/views/now_showing.hbs
@@ -40,7 +40,7 @@
                                 <div class="hidden-content">
                                     <p><label class="movie-c">C{{dotuoi}}</label></p>
                                     <a href="/chi-tiet-phim/{{maphim}}">
-                                        <button class="hidden-button" id="hidden-button">Mua vé</button>
+                                        <button class="hidden-button" id="hidden-button">CHI TIẾT</button>
                                     </a>
                                 </div>
                             </div>
@@ -55,15 +55,9 @@
                 <div class="movie-des">
                     <div class="cinema-des">
                         <div class="cinema-name-des">
-                            <h4>LDBT CINEMA</h4>
+                            <h4>L2DBT CINEMA</h4>
                         </div>
-                        <p>Tháng Giêng là tháng ăn chơi, tháng hai cờ bạc, tháng 3 cùng cười haha với Galaxy Cinema với
-                            vô số phim chiếu rạp hài sắp đổ bộ.
-
-                            Đặc biệt, để mang lại niềm vui cho chị em ngày Quốc Tế Phụ Nữ 8-3, cùng dẫn các bà mẹ, chị
-                            em, cũng như người yêu ra rạp thưởng thức những bộ phim điện ảnh hài hước từ trong nước cũng
-                            như quốc tế.</p>
-                    </div><br />
+                    </div>
                     {{#each films}}
                     <div class="des">
                         <div class="movie-des">
