--- a/src/resource/views/partials/footer.hbs
+++ b/src/resource/views/partials/footer.hbs
@@ -8,7 +8,7 @@
                         GIỚI THIỆU
                     </h6>
                     <p>
-                        <a href="#!" class="text-reset" style="text-decoration: none">VỀ CHÚNG TÔI</a>
+                        <a href="/ve-chung-toi" class="text-reset" style="text-decoration: none">VỀ CHÚNG TÔI</a>
                     </p>
                     <p>
                         <a href="#!" class="text-reset" style="text-decoration: none">THỎA THUẬN SỬ DỤNG</a>
@@ -26,16 +26,16 @@
                         GÓC ĐIỆN ẢNH
                     </h6>
                     <p>
-                        <a href="#!" class="text-reset" style="text-decoration: none">THỂ LOẠI PHIM</a>
+                        <a href="/the-loai-phim" class="text-reset" style="text-decoration: none">THỂ LOẠI PHIM</a>
                     </p>
                     <p>
-                        <a href="#!" class="text-reset" style="text-decoration: none">BÌNH LUẬN PHIM</a>
+                        <a href="/binh-luan-phim" class="text-reset" style="text-decoration: none">BÌNH LUẬN PHIM</a>
                     </p>
                     <p>
-                        <a href="#!" class="text-reset" style="text-decoration: none">BLOG ĐIỆN ẢNH</a>
+                        <a href="/blog-dien-anh" class="text-reset" style="text-decoration: none">BLOG ĐIỆN ẢNH</a>
                     </p>
                     <p>
-                        <a href="#!" class="text-reset" style="text-decoration: none">PHIM HAY THÁNG</a>
+                        <a href="/#!" class="text-reset" style="text-decoration: none">PHIM HAY THÁNG</a>
                     </p>
                 </div>
 
@@ -44,16 +44,17 @@
                         HỖ TRỢ
                     </h6>
                     <p>
-                        <a href="#" class="text-reset" style="text-decoration: none">GÓP Ý</a>
+                        <a href="/ho-tro" class="text-reset" style="text-decoration: none">GÓP Ý</a>
                     </p>
                     <p>
-                        <a href="#" class="text-reset" style="text-decoration: none">SALE & SERVICES</a>
+                        <a href="/gia-ve" class="text-reset" style="text-decoration: none">RẠP / GIÁ VÉ</a>
                     </p>
                     <p>
-                        <a href="#" class="text-reset" style="text-decoration: none">RẠP / GIÁ VÉ</a>
+                        <a href="#!" class="text-reset" style="text-decoration: none">SALE & SERVICES</a>
                     </p>
+                    
                     <p>
-                        <a href="#" class="text-reset" style="text-decoration: none">TUYỂN DỤNG</a>
+                        <a href="#!" class="text-reset" style="text-decoration: none">TUYỂN DỤNG</a>
                     </p>
                 </div>
 
@@ -73,7 +74,7 @@
     <!-- Address -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
         © 2023 Cinema Ticket Booking Online:
-        <a class="text-reset fw-bold" href="#">L2DBT Cinema</a>
+        <a class="text-reset fw-bold" href="/">L2DBT Cinema</a>
     </div>
     <!-- End Address -->
 </div>
